# basic-log

./: .gitignore  CMakeLists.txt  README.md
src/: basic_log.h  main.cpp
